Cookies bug fixed, toast container dark mode bug fixed

--- a/public/styles/globals.css
+++ b/public/styles/globals.css
@@ -72,29 +72,6 @@
   }
 }
 
-#SvgjsText1019 {
-  /* Your CSS styles here */
-  font-family: "iranyekan, sans-serif" !important;
-  color: red !important;
-  /* Add any other styles you want */
-}
-
-.animation-bounce {
-  animation: bounce 1s infinite;
-
-  @keyframes bounce {
-    0%,
-    100% {
-      transform: translateY(-25%);
-      animation-timing-function: cubic-bezier(0.8, 0, 1, 1);
-    }
-    50% {
-      transform: translateY(0);
-      animation-timing-function: cubic-bezier(0, 0, 0.2, 1);
-    }
-  }
-}
-
 /* CSS for the photo with animation */
 .photo-animation {
   opacity: 0.8; /* Initial opacity */
@@ -127,24 +104,4 @@
   border-radius: 50%;
   background-color: #3498db; /* You can change the color */
   position: relative;
-}
-
-.text1,
-.text2 {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  color: #fff; /* You can change the text color */
-  text-align: center;
-}
-
-.text1 {
-  font-size: 24px;
-  /* z-index: 1; */
-}
-
-.text2 {
-  font-size: 18px;
-  /* z-index: 0; */
 }
